src_old/objects/ProjectTypeCustomSettings__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Project Type Configuration Settings</description>
    <fields>
        <fullName>FieldSetName__c</fullName>
        <label>Field Set Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProjectCompletionStrategyClass__c</fullName>
        <label>Project Completion Strategy Class</label>
        <length>140</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ReReserveTrackFieldList__c</fullName>
        <label>ReReserveTrackFieldList</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SchedulingStrategyClass__c</fullName>
        <label>Scheduling Strategy Class</label>
        <length>140</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>ProjectTypeCustomSettings</label>
</CustomObject>